--- a/examples/imgui.ini
+++ b/examples/imgui.ini
@@ -9,7 +9,7 @@ Size=369,277
 Collapsed=1
 
 [Window][Dear ImGui Demo]
-Pos=506,6
+Pos=511,3
 Size=753,700
 Collapsed=0
 
@@ -153,9 +153,9 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Table][0xC9935533,3]
-Column 0  Weight=1.0000
-Column 1  Weight=1.0000
-Column 2  Weight=1.0000
+Column 0  Weight=0.7038
+Column 1  Weight=0.8301
+Column 2  Weight=1.4662
 
 [Table][0x861D378E,3]
 Column 0  Weight=1.0000
@@ -185,4 +185,13 @@ RefScale=13
 Column 0  Width=129 Sort=0^
 Column 1  Width=63
 Column 2  Width=-1
+
+[Table][0xAA8ABBB3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xE0773582,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
 
